--- a/style.css
+++ b/style.css
@@ -185,7 +185,7 @@ header {
 	width: 100vw;
 	height: 100vh;
 	background-color: var(--primary-color);
-	position: absolute;
+	position: fixed;
 	top: -80%;
 	left: 0;
 	z-index: 1;
@@ -297,11 +297,25 @@ header {
 }
 
 #banner .overlay{
-	height: 100%;
+	height: 95%;
 	width: 100%;
 	background-color: var(--primary-color);
 	opacity: 0.6;
 }
+.read-more{
+	position: relative;
+	margin-left: 40px;
+	padding-left: 5px;
+}
+.read-more::before{
+	content: '';
+	position: absolute;
+	left: -45%;
+	top: 50%;
+	width: 40px;
+	height: 2px;
+	background-color: var(--secondary-color);
+   }
 
 /* About Section */
 
