--- a/style.css
+++ b/style.css
@@ -140,6 +140,22 @@ a:hover {
 }
 
 
+input[type=text], input[type=email], input[type=tel], textarea {
+	background-color: var(--white-color);
+	border: none;
+}
+
+input[type=submit] {
+	background-color: var(--primary-color);
+	border: none;
+	color: #fff;
+	padding: 15px 40px;
+}
+
+input[type=submit]:hover {
+	background-color: var(--secondary-color);
+}
+
 /* Header Section */
 .custom_logo {
 	z-index: 10;
@@ -492,62 +508,23 @@ header {
 
 /* Contact Page */
 #contact {
-	height: 100%;
-	background: linear-gradient(-90deg, var(--white-color) 40%, var(--sand-25) 15%, var(--sand-25) 55%);
+	background: url('./img/startpagina.jpg') bottom right no-repeat;
+	padding-bottom: 250px;
+	margin-bottom: 50px;
+	height: 800px;
+	margin-top: 100px;
+	
 }
 
-#contact .contactimg img {
-	width: 100%;
+.contactblock {
+	background-color: #F8F9FB;
+	padding: 5% 10%;
 }
 
-#locations .contactblock {
-	position: relative;
-}
-
-
-#contact .social-link {
-	font-size: 20px;
-	color: #000;
-	margin-bottom: 20px;
-}
-
-#contact .social-link img {
-	margin-right: 10px;
-	object-fit: contain;
-	background-color: var(--primary-color);
-	padding: 20px;
-}
-
-#contact .btn {
-	width: 300px;
-}
-
-/* What We Do Section */
-
-#whatwedo {
-		background: linear-gradient(-90deg, var(--white-color) 40%, var(--sand-25) 15%, var(--sand-25) 55%);
-}
-
-#whatwedo .whatwedoimg img {
-	width: 100%;
-}
-
-.content img {
-	width: 100%;
-	height: 250px;
-	object-fit: cover;
-}
-
-.nav-link.active {
-	background-color: var(--people-color) !important;
-	color: var(--white-color) !important;
-	border-radius: 0;
-}
-
-.nav-link {
+.contactblocks span {
 	color: var(--secondary-color);
 }
- 
+
 
 /* Footer Section */
 #footer {
@@ -634,6 +611,20 @@ header {
 	transition: all 0.4s;
 	cursor: pointer;
 }
+
+.main-navigation li:last-child {
+	background-color: var(--secondary-color);
+	color: var(--white-color);
+}
+
+.main-navigation li:last-child:hover {
+	background-color: var(--primary-color);
+}
+
+.main-navigation li:last-child:hover a {
+	color: var(--white-color);
+}
+
 .main-navigation li:hover > a {
 	color: var(--primary-color);
 	transition: 0.4s;
