--- a/style.css
+++ b/style.css
@@ -7,6 +7,13 @@
  Tags:         light, colors, simple , no sidebar, responsive-layout, accessibility-ready
 */
 
+@font-face{
+  font-family: 'Lucida Bright';
+  src: url('/dfbo.eu/wp-content/themes/dfbo.eu/fonts/Lucidabright.ttf') format('truetype');
+}
+
+
+
 :root {
   --primary-color: #081A34;
   --secondary-color: #EF7726;
@@ -25,9 +32,9 @@ body {
 }
 
 h1 {
-  	font-family: var(--primary-font);
+  	font-family: 'Lucida Bright';
 	font-size: 50px;
-	font-weight: 600;
+	font-weight: 400;
 	color: var(--black-color);
 	text-transform: uppercase;
 }
@@ -284,8 +291,17 @@ header {
  top: 25%;
 }
 
+#banner .bannercontent h1 span {
+	font-size: 80px;
+	color: var(--secondary-color);
+	font-family: 'Lucida Bright';
+	font-weight: 300;
+}
+
 #banner  h1 {
 	color: var(--white-color);
+	line-height: 55px;
+	font-weight: 200;
 }
 
 #banner span {
@@ -339,12 +355,13 @@ header {
 	background: url('./img/startpagina.jpg') bottom right no-repeat;
 	padding-bottom: 250px;
 	margin-bottom: 50px;
-	
+	margin-top: -35px;
 }
 
 .aboutblock {
 	background-color: #F8F9FB;
 	padding: 5% 10%;
+	border-top: 8px solid #ef7726;
 }
 
 .aboutblock span {
@@ -427,6 +444,7 @@ header {
 
 .teamblock img {
 	width: 100%;
+	border-top: 8px solid #ef7726;
 }
 
 .teamblock p {
@@ -437,6 +455,7 @@ header {
 	background-color: var(--primary-color);
 	transition: 0.4s;
 	padding: 20px;
+	height: 220px;
 }
 
 .teamblock .teamcontent span {
