--- a/style.css
+++ b/style.css
@@ -352,7 +352,7 @@ header {
 /* About Section */
 
 #about {
-	background: url('./img/startpagina.jpg') bottom right no-repeat;
+	background: url('./img/startpagina.png') bottom right no-repeat;
 	padding-bottom: 250px;
 	margin-bottom: 50px;
 	margin-top: -35px;
@@ -579,7 +579,7 @@ header {
 }
 
 #category__container--image{
-	background-image: url('./img/startpagina.jpg');
+	background-image: url('./img/startpagina.png');
 	background-position: right;
 	background-repeat: no-repeat;
 	background-size: contain;
@@ -654,7 +654,7 @@ header {
 
 /* Contact Page */
 #contact {
-	background: url('./img/startpagina.jpg') bottom right no-repeat;
+	background: url('./img/startpagina.png') bottom right no-repeat;
 	padding-bottom: 250px;
 	margin-bottom: 50px;
 	height: 800px;
