--- a/style.css
+++ b/style.css
@@ -147,6 +147,14 @@ a:hover {
 	position: relative;
 }
 
+.swiper{
+	width: 100%;
+	height: 100vh;
+}
+
+.swiper-slide{
+	height: 100%!important;
+}
 
 input[type=text], input[type=email], input[type=tel], textarea {
 	background-color: var(--white-color);
@@ -269,13 +277,13 @@ header {
   right: 0;
   top: 0;
    width: 100vw;
-	height: 90vh;
+	height: 100vh;
   object-fit: cover;
   	z-index: 0;
 }
 
 #banner {
-	height: 90vh;
+	height: 100vh;
 }
 
 #banner  h1 {
@@ -639,6 +647,10 @@ header {
 	border-right: solid 1px var(--white-color);
 	margin-top: 50px;
 	height: 300px;
+}
+
+.cat__post:last-child{
+	border-right: unset!important;
 }
 
 #category__posts h3, #category__posts p,#category__posts a{
